<resources>
    <string name="app_name">relpl</string>

    <string name="all_slogan">함께 만들어가는 깨끗한 동네 생활</string>
    <string name="all_id">아이디</string>
    <string name="all_pw">비밀번호</string>
    <string name="all_signin">로그인</string>
    <string name="all_invalid_input">유효하지 않은 입력 값이 존재합니다 :(</string>
    <string name="all_input_everything">모든 값을 입력해 주세요</string>
    <string name="all_cancle">취소</string>
    <string name="all_net_err">네트워크 오류입니다 :(</string>
    <string name="all_verify_send_fail">인증 코드 발송에 실패했습니다 :(</string>
    <string name="all_verify_send_success">인증 코드를 발송했습니다. 90초 내에 코드를 입력해 주세요</string>
    <string name="all_verify_success">인증에 성공했습니다 :)</string>
    <string name="all_verify_fail">인증에 실패했습니다 :(</string>
    <string name="all_load_fail">정보를 불러오지 못했습니다 :(</string>
    <string name="all_finish_app">뒤로가기를 한번 더 눌러 종료합니다</string>


    <string name="start_sign_up">회원가입</string>

    <string name="signin_auto_login">자동 로그인</string>
    <string name="signin_empty_input">아이디와 비밀번호가 공백입니다.</string>


    <string name="signup_all_next">다음</string>
    <string name="signup_all_et_err">유효하지 않은 형식입니다 :(</string>

    <string name="signup_phonenumber_main">핸드폰 번호로 가입해 주세요</string>
    <string name="signup_phonenumber_content">입력해 주신 핸드폰 번호로 인증 코드를 \n보내드립니다</string>
    <string name="signup_phonenumber_et_hint">010 xxxxxxxx</string>
    <string name="signup_phonenumber_et_err">숫자만 입력해 주세요</string>
    <string name="signup_phonenumber_et_helper_valid">유효한 핸드폰 번호입니다 :)</string>
    <string name="signup_phonenumber_send">전송</string>

    <string name="signup_verify_main">핸드폰 인증</string>
    <string name="signup_verify_content">%1$s로\n 보내드린 인증 코드를 입력해 주세요</string>
    <string name="signup_verify_verify">인증</string>

    <string name="signup_id_main">아이디를 입력해 주세요</string>
    <string name="signup_id_content">아이디는 6자 이상으로 영문, 숫자\n
        _(언더바) .(점)만 입력하실 수 있습니다</string>
    <string name="signup_id_et_valid">유효한 아이디입니다 :)</string>

    <string name="signup_pw_main">비밀번호를 입력해 주세요</string>
    <string name="signup_pw_content">비밀번호는 10자 이상으로 영문, 숫자, 특수 문자가 \n
        필수로 포함 되어야 합니다</string>
    <string name="signup_pw_et_valid">유효한 비밀번호입니다 :)</string>
    <string name="signup_pw_et_hint">비밀번호 입력</string>
    <string name="signup_repw_et_hint">비밀번호 재입력</string>
    <string name="signup_repw_et_err">비밀번호가 일치하지 않습니다 :(</string>
    <string name="signup_repw_et_valid">비밀번호와 일치합니다 :)</string>

    <string name="signup_nickname_main">닉네임을 입력해 주세요</string>
    <string name="signup_nickname_content">닉네임은 2자 이상으로 한글, 영문, 숫자만\n
        입력 하실 수 있습니다</string>
    <string name="signup_nickname_et_valid">유효한 닉네임입니다 :)</string>

    <string name="signup_photo_welcome">%1$s님\n 환영합니다!</string>
    <string name="signup_photo_login">가입하신 아이디로 로그인해 주세요</string>
    <string name="signup_photo_main">프로필 사진을 등록해 보세요</string>
    <string name="signup_photo_content">추후 마이 프로필 화면에서 등록 및 수정이 가능합니다</string>
    <string name="signup_photo_done">완료</string>

    <string name="signup_sucess">회원가입이 완료되었습니다 :)</string>

    <string name="profile_profile">프로필</string>
    <string name="profile_nickname">닉네임</string>
    <string name="profile_phone">핸드폰 번호</string>
    <string name="profile_pw_change">비밀번호 변경</string>
    <string name="profile_point">포인트</string>
    <string name="profile_cur_point">현재 포인트</string>
    <string name="profile_point_history">포인트 내역</string>
    <string name="profile_plastic_bag">종량제 봉투와 교환하기</string>
    <string name="profile_report">제보</string>
    <string name="profile_report_count">제보 횟수</string>
    <string name="profile_report_history">제보 내역</string>
    <string name="profile_withdrawal"><u>회원 탈퇴</u></string>

    <string name="profile_change">프로필 변경</string>
    <string name="profile_change_dup_check">중복 확인</string>
    <string name="profile_change_send_code">인증 코드 발송</string>
    <string name="profile_change_verification_code">인증 코드</string>
    <string name="profile_change_verify">인증 코드 확인</string>
    <string name="profile_change_please_nickname_dup">핸드폰번호 중복 검사를 실시해 주세요</string>
    <string name="profile_change_usable_nickname">사용 가능한 닉네임입니다 :)</string>
    <string name="profile_change_dup_nickname">이미 사용 중인 닉네임입니다 :(</string>
    <string name="profile_change_usable_phone">사용 가능한 핸드폰번호입니다 :)</string>
    <string name="profile_change_dup_phone">이미 사용 중인 핸드폰번호입니다 :(</string>
    <string name="profile_change_success">정보가 변경되었습니다 :)</string>

    <string name="dialog_change_pw_title">비밀번호 변경</string>
    <string name="dialog_change_pw_original_pw">기존 비밀번호</string>
    <string name="dialog_change_pw_new_pw">새로운 비밀번호</string>
    <string name="dialog_change_pw_new_re">비밀번호 확인</string>
    <string name="dialog_change_pw_change">변경</string>
    <string name="change_pw_success">비밀번호가 변경되었습니다</string>

    <string name="history_user_nickname">%1$s님의 기록입니다</string>
    <string name="history_clean_earth">지구를 깨끗하게 해 주셨어요</string>
    <string name="history_item_project_not_done">프로젝트가 완료되지 못했어요 :(</string>
    <string name="history_no_data">기록이 존재하지 않습니다</string>

    <string name="home_welcome">%1$s님 환영합니다!</string>
    <string name="home_total_distance">총 %1$s 걸으셨습니다</string>
    <string name="home_start_plogging">플로깅 시작하기</string>
    <string name="home_rank">랭킹</string>
    <string name="home_report">제보하기</string>
    <string name="home_record">내 플로깅 기록</string>


    <string name="load_relay_instructions">지도에 있는 마커를 선택하여 릴레이를 이어가거나 \n
        새로운 릴레이를 생성해 보세요!</string>
    <string name="load_relay_create_path">경로를 설정하여 시작하기</string>
    <string name="load_relay_create_distance">거리를 설정하여 시작하기</string>

    <string name="report_ment">플로깅이 필요한 지역을 제보해 주세요!</string>
    <string name="report_guide">제보된 위치는 경로 추천 시 반영됩니다</string>
    <string name="report_cur_point">현재 보유 포인트</string>
    <string name="report_use_point">소모 포인트</string>
    <string name="report_report">제보하기</string>

    <string name="report_record_nickname">%1$s님의\n제보 내역입니다</string>
    <string name="report_record_count">총 %1$s번 제보해주셨어요</string>

    <string name="dlg_create_all_relay_name">릴레이 이름을 입력해 주세요</string>
    <string name="dlg_create_all_relay_crate">생성</string>
    <string name="dlg_create_distance_relay_distance">목표 거리를 설정해 주세요</string>
    <string name="dlg_create_distance_relay_end">릴레이 종료일</string>

    <string name="rank_comment">우리 동네를 깨끗하게 해주신 분들</string>
    <string name="rank_daily">daily</string>
    <string name="rank_weekly">weekly</string>
    <string name="rank_monthly">monthly</string>
    
    <string name="create_path_relay_set_destination">해당 위치를 목적지로 설정합니다</string>
    <string name="create_path_relay_move_screen">화면을 움직여 목적지를 선택해 주세요</string>
    <string name="create_path_relay_set">설정</string>

    <string name="dialog_exit_title">회원 탈퇴</string>
    <string name="dialog_exit_content">정말로 탈퇴하시겠습니까?\n되돌리실 수 없습니다</string>
    <string name="dialog_exit_exit">탈퇴</string>

    <string name="dialog_create_path_set_path">경로가 설정 되었어요</string>
    <string name="dialog_create_path_re_set">재설정</string>


</resources>