<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".signup.SignupPhoneFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_phonenumber_main"
        android:textAppearance="@style/Relpl.Text.Signup.Main"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_phonenumber_content"
        android:textAppearance="@style/Relpl.Text.Signup.Content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Relpl.TextInputLayout"
        android:id="@+id/et_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_phonenumber_et_hint"
        app:helperText="@string/signup_phonenumber_et_err"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Relpl.FullButton.Signup"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="10dp"
        android:text="@string/signup_phonenumber_send"/>

</LinearLayout>