<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".signup.SignupProfilePhotoFragment"
    android:orientation="vertical"
    android:gravity="center">


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_photo_welcome"
        android:textAppearance="@style/Relpl.Text.Signup.Main"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/signup_photo_login"
        android:textAppearance="@style/Relpl.Text.Signup.Content" />

    <ImageView
        android:id="@+id/iv_profile_photo"
        android:layout_width="@dimen/prodile_photo_size"
        android:layout_height="@dimen/prodile_photo_size"
        android:layout_marginTop="30dp"
        android:src="@drawable/bg_signup_add_photo" />

    <TextView
        android:id="@+id/tv_add_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/signup_photo_main"
        android:textAppearance="@style/Relpl.Text.Signup.Content" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/font_wanted_sans_medium"
        android:gravity="center"
        android:text="@string/signup_photo_content"
        android:textColor="@color/text_gray"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Relpl.FullButton.Signup"
        android:id="@+id/btn_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="45dp"
        android:text="@string/signup_photo_done" />


</LinearLayout>