<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".signup.SignupPasswordFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_pw_main"
        style="@style/Relpl.Text.Signup.Main" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:gravity="center"
        android:text="@string/signup_pw_content"
        style="@style/Relpl.Text.M.16" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_pw"
        style="@style/Relpl.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/signup_pw_et_hint"
        app:counterMaxLength="20"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_pw_re"
        style="@style/Relpl.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signup_repw_et_hint"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        app:counterMaxLength="20"
        app:counterEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/Relpl.FullButton.Signup"
        android:textAppearance="@style/Relpl.Text.SB.16"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="10dp"
        android:text="@string/signup_all_next" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>