<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_change_pw_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_change_pw_title"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/Relpl.Text.Dialog.Title"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_pw_content"
            android:textAppearance="@style/Relpl.Text.Dialog.Content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/dialog_change_pw_original_pw"
            android:textAppearance="@style/Relpl.Text.TextInput.Title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_original_pw"
            style="@style/Relpl.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="20"
            app:counterEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/dialog_change_pw_new_pw"
            android:textAppearance="@style/Relpl.Text.TextInput.Title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_new_pw"
            style="@style/Relpl.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="20"
            app:counterEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/dialog_change_pw_new_re"
            android:textAppearance="@style/Relpl.Text.TextInput.Title"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_new_pw_re"
            style="@style/Relpl.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterMaxLength="20"
            app:counterEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="end"
            android:paddingLeft="60dp"
            android:paddingRight="20dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:text="@string/all_cancle"
                android:textAppearance="@style/Relpl.Text.Dialog.Button" />

            <TextView
                android:id="@+id/tv_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_change_pw_change"
                android:textAppearance="@style/Relpl.Text.Dialog.Button"
                android:layout_marginBottom="26dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>